infra/knodes-backoffice/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: knodes-backoffice
  namespace: knodes-backoffice
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`backoffice.knodes.app`)
      kind: Rule
      services:
        - name: knodes-backoffice
          port: 80
  tls:
    certResolver: letsencrypt
